--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -217,7 +217,7 @@
         <div class="furnace-card" *ngFor="let furnace of rawData; let fIndex = index">
 
   <div class="furnace-header">
-    Furnace {{ fIndex === 0 ? 'A' : 'B' }}
+  {{ furnace.furnaceName   }}
   </div>
 
   <div class="workflow-container">
