--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+html, body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
-  background: #1e293b; 
+  overflow: hidden;
+  background: #1e293b;
+}
+
+.tv-root {
+  width: 100%;
+  height: 100%;
+  padding: 60px 80px;   // SAFE AREA for TV overscan
+  box-sizing: border-box;
 }
