upadte in the date

--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -161,7 +161,7 @@
             Furnace Management System
         </div>
           <div class="date-box">
-    19/01/2026
+{{ today | date: 'dd/MM/yyyy' }}
     </div>
     </div>
 
