--- a/src/app/result/result.scss
+++ b/src/app/result/result.scss
@@ -346,7 +346,9 @@ td.normal {
 }
 
 .content-card h4 { font-size: 12px; color:  #334155; margin-bottom: 12px; line-height: 1.3; }
-.info { font-size: 10px; color:  #94a3b8; margin-bottom: 3px; }
+.info { font-size: 14px;
+    color: #000000;
+    margin-bottom: 3px; }
 .sub-text { font-size: 9px; color:  #94a3b8; margin-bottom: 15px; font-style: italic; }
 
 /* Status Badges */
