--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -1,10 +1,38 @@
-<!-- <div>
-  enter the IP <input type="text" [(ngModel)]="ip" />
-  <button (click)="setIP(ip)">Set IP</button>
-</div> -->
+<div class="ip-center" *ngIf="!isIPSet">
+  <div class="ip-card">
+    <p class="ip-title">Enter the IP</p>
+
+    <!-- IP INPUT -->
+    <input
+      type="text"
+      [(ngModel)]="ip"
+      placeholder="103.5.113.101:9006"
+      class="ip-input"
+    />
+
+    <!-- IV SIZE SELECT -->
+    <select class="ip-input">
+      <option value="" disabled selected>Select TV Size</option>
+      <option>32</option>
+      <option>40</option>
+      <option>43</option>
+      <option>50</option>
+      <option>55</option>
+      <option>60</option>
+      <option>65</option>
+    </select>
+
+    <!-- SET BUTTON -->
+    <button class="set-ip-btn" (click)="setIP()">Set IP</button>
+  </div>
+</div>
 
 
-<div class="IP-pop" >
+
+
+
+
+<div class="IP-pop" *ngIf="isIPSet" >
 
   <div class="wrapper"  *ngIf="selectedResult  as result">
 
@@ -17,7 +45,11 @@
         <div class="logo-text">
           <!-- <div class="title">ACCEEDO</div>
           <div class="sub">MeltPro</div> -->
-          <img style="height: 60px;" src="assets/newresize1-removebg-preview.png" alt="Acceedo Logo" />
+          <img style="height: 60px;" src="assets/logo.png" alt="Acceedo Logo" />
+          <button class="change-ip-btn image-btn" (click)="resetIP()">
+  <img src="assets/ip.png" alt="Change IP" />
+</button>
+
         </div>
       </div>
       <div class="header-line"></div>
@@ -63,7 +95,7 @@
   <img src="assets/cross.png" alt="Failed" style="    height: 20px;
     width: 20px;
     margin-left: 4px;
-    padding-top: 3px;"/>
+    padding-top: 6px;"/>
 </span>
       </div>
     </div>
@@ -163,7 +195,7 @@
 
   <div class="side-header">
         <div class="logo-box">
-            <img src="assets/newresize1-removebg-preview.png" alt="Sandfits Casting Excellence">
+            <img src="assets/logo.png" alt="Sandfits Casting Excellence">
         </div>
         <div class="title center-title">
             Furnace Management System
@@ -180,16 +212,20 @@
     <header class="top-nav">
       <div class="nav-left">
 
-    <div class="border">
+    <div class="border" style="display: flex; align-items: center;  justify-content: space-between;  margin-right: 0px; ">
 
-        <h2>{{ item.furnaceName }}</h2>
+        <div>
+          {{ item.furnaceName }}
+        </div>
+        <div>
+          Heat No - <span style="color: red;" >{{ item.heatNo }}</span>
+        </div>
       </div>
 
       </div>
 
     </header>
 
-    <div class="stage-title">Stages</div>
 
     <div class="process-timeline">
       <div class="base-line"></div>
@@ -274,8 +310,8 @@
             }}
           </p>
 
-          <div class="status auto" *ngIf="getStageDate(item, 2); else pending">
-            AUTO
+          <div class="status completed" *ngIf="getStageDate(item, 2); else pending">
+            Completed
           </div>
 
           <ng-template #pending>
@@ -363,8 +399,15 @@
 
 </div>
 
+<div *ngIf="rawData.length === 0" >
+<div class="furnace-container">
+    <img src="assets\photo.png" alt="Furnace Icon" class="furnace-img">
+   <p class="status-text">"Furnace is not running!"</p>
+</div>
+</div>
 
-<div *ngIf="rawData.length === 0">
+
+<div *ngIf="rawData.length === 0" style="display: none;" >
   <div *ngIf="rawData.length === 0">
     <div class="dashboard-container2">
       <header class="main-header">
