--- a/src/app/result/result.scss
+++ b/src/app/result/result.scss
@@ -5,23 +5,29 @@
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
-body {
-  background: #1D2637;
-   transform: scale(0.95);
-  transform-origin: top center;
-  overflow: hidden;
-}
+// body {
+//   background: #1D2637;
+//    transform: scale(0.95);
+//   transform-origin: top center;
+//   overflow: hidden;
+// }
 
 html, body {
-  width: 1920px;
-  height: 1080px;
+  // width: 1920px;
+  // height: 1080px;
+  // overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background: #1D2637;
   overflow: hidden;
 }
 
 
 .wrapper{
-  width:96%;
-  margin:20px auto;
+  // width:96%;
+  // margin:20px auto;
+  width: 100%;
+  height: 100%;
 }
 
 /* HEADER */
@@ -34,43 +40,58 @@ html, body {
 .header-section{
   display:flex;
   align-items:center;
-  gap:15px;
+  // gap:15px;
+  gap: 1.5vw;
   flex:1;
 }
 
 .header-section.center{
-  color: white;
-}
-
-.header-section.right{
-  color: white;
+  // color: white;
   justify-content: center;
-    font-size: 26px;
-    font-weight: 700;
-}
-
-.header-section.center{
-  justify-content:center;
-  font-size:40px;
-  font-weight:700;
+  font-size: 3.5vw;
+  font-weight: 700;
+  color: #fff;
 }
 
 .header-section.right{
-  justify-content:flex-end;
-  font-size:35px;
+  // color: white;
+  // justify-content: center;
+  //   font-size: 26px;
+  //   font-weight: 700;
+  justify-content: flex-end;
+  font-size: 2.4vw;
+  font-weight: 700;
+  color: #fff;
 }
+
+// .header-section.center{
+//   justify-content:center;
+//   font-size:40px;
+//   font-weight:700;
+// }
+
+// .header-section.right{
+//   justify-content:flex-end;
+//   font-size:35px;
+// }
 
 .header-line{
-  height:2px;
-  background:#475569;
-  flex:1;
+  // height:2px;
+  // background:#475569;
+  // flex:1;
+  height: 0.3vh;
+  background: #475569;
+  flex: 1;
 }
 
 /* LOGO */
 .logo{
-  display:flex;
-  align-items:center;
-  gap:10px;
+  // display:flex;
+  // align-items:center;
+  // gap:10px;
+  display: flex;
+  align-items: center;
+  gap: 1vw;
 }
 
 .logo-icon{
@@ -78,36 +99,52 @@ html, body {
 }
 
 .logo-text .title{
-  font-size:20px;
-  font-weight:700;
-  color: #ffffff;
+  // font-size:20px;
+  // font-weight:700;
+  // color: #ffffff;
+  font-size: 1.6vw;
+  font-weight: 700;
+  color: #fff;
 }
 
 
 
 .logo-text .sub{
-  font-size:13px;
-  color:#f59e0b;
+  // font-size:13px;
+  // color:#f59e0b;
+    font-size: 1.1vw;
+  color: #f59e0b;
 }
 
 .card{
-  background:#334155;
-  border-radius:12px;
-  margin-top:20px;
-  padding:14px;
+  // background:#334155;
+  // border-radius:12px;
+  // margin-top:20px;
+  // padding:14px;
+  background: #334155;
+  border-radius: 1.2vw;
+  // margin-top: 2vh;
+  padding: 1vh 2vw;
 }
 
 .card-top{
-  display:flex;
-  justify-content:space-between;
-  font-size:20px;
-  color: #fcfcfc;
+  // display:flex;
+  // justify-content:space-between;
+  // font-size:20px;
+  // color: #fcfcfc;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.6vw;
+  color: #fff;
 }
 
 .divider{
-  height:1px;
-  background:#475569;
-  margin:14px 0;
+  // height:1px;
+  // background:#475569;
+  // margin:14px 0;
+  height: 0.2vh;
+  background: #475569;
+  margin: 2vh 0;
 }
 
 // .section-start td,
@@ -140,14 +177,19 @@ html, body {
 
 /* INFO GRID */
 .info-grid{
-  display:grid;
-  grid-template-columns:repeat(5,1fr);
-  color: #fcfcfc;
+  // display:grid;
+  // grid-template-columns:repeat(5,1fr);
+  // color: #fcfcfc;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  color: #fff;
 }
 
 .info-item{
-  padding:10px 15px;
-  border-right:1px solid #475569;
+  // padding:10px 15px;
+  // border-right:1px solid #475569;
+  padding: 1.8vh 1.5vw;
+  border-right: 0.1vw solid #475569;
 }
 
 .info-item:last-child{
@@ -155,69 +197,99 @@ html, body {
 }
 
 .info-item label{
-  font-size:30px;
-  color:#cbd5f5;
+  // font-size:30px;
+  // color:#cbd5f5;
+  font-size: 1.8vw;
+  color: #cbd5f5;
 }
 
 .info-item span{
-  font-size:23px;
-  font-weight:600;
+  // font-size:23px;
+  // font-weight:600;
+  font-size: 1.4vw;
+  font-weight: 600;
 }
 
 .heat-no{
-  font-size:30px;
-  font-weight:700;
+  // font-size:30px;
+  // font-weight:700;
+  font-size: 2vw;
+  font-weight: 700;
+
   color: #fcfcfc;
 }
 
 /* TABLE */
 .table-card{
-  background:#334155;
-  border-radius:12px;
-  margin-top:25px;
-  overflow:hidden;
-  color: #ffffff;
+  // background:#334155;
+  // border-radius:12px;
+  // margin-top:25px;
+  // overflow:hidden;
+  // color: #ffffff;
+  background: #334155;
+  border-radius: 1.2vw;
+  margin-top: 2.5vh;
+  overflow: hidden;
+  color: #fff;
 }
-.table-card {
-  display: flex;
-  flex-direction: column;
-}
+// .table-card {
+//   display: flex;
+//   flex-direction: column;
+// }
 
 
 .table-title{
-  padding:14px 18px;
-  font-size:20px;
-  font-weight:700;
-  border-bottom:1px solid #475569;
+  // padding:14px 18px;
+  // font-size:20px;
+  // font-weight:700;
+  // border-bottom:1px solid #475569;
+  padding: 1.8vh 2vw;
+  font-size: 1.6vw;
+  font-weight: 700;
+  border-bottom: 0.1vw solid #475569;
+
   color: #fcfcfc;
 }
 
 table{
-  width:100%;
-  border-collapse:collapse;
-  text-align:center;
+  // width:100%;
+  // border-collapse:collapse;
+  // text-align:center;
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
 }
 
 th{
-  background:#3b4a63;
-  padding:10px;
-  border-bottom:1px solid #475569;
-    font-size:30px;
+  // background:#3b4a63;
+  // padding:10px;
+  // border-bottom:1px solid #475569;
+  //   font-size:30px;
+  background: #3b4a63;
+  padding: 1.5vh;
+  font-size: 1.6vw;
 }
 
 td{
-  padding:10px;
-  border-bottom:1px solid #475569;
-   font-size:20px;
-   border-left: 0.2px solid #475569;
+  // padding:10px;
+  // border-bottom:1px solid #475569;
+  //  font-size:20px;
+  //  border-left: 0.2px solid #475569;
+  padding: 1.2vh;
+  font-size: 1.3vw;
+  border-bottom: 0.1vw solid #475569;
+  border-left: 0.05vw solid #475569;
 }
 
 th:first-child,
 td:first-child{
-  text-align:left;
-  padding-left:18px;
-  font-weight:600;
-  font-size:20px;
+  // text-align:left;
+  // padding-left:18px;
+  // font-weight:600;
+  // font-size:20px;
+  text-align: left;
+  padding-left: 2vw;
+  font-weight: 600;
 }
 
 .danger{
@@ -247,24 +319,34 @@ td.normal {
 
 
 .tested-ok {
+  // background: linear-gradient(135deg, #2ecc71, #27ae60);
+  // padding: 6px 16px;
+  // border-radius: 20px;
+  // font-size: 20px;
+  // font-weight: bold;
+  // box-shadow: 0 0 10px rgba(46, 204, 113, 0.6);
   background: linear-gradient(135deg, #2ecc71, #27ae60);
-  padding: 6px 16px;
-  border-radius: 20px;
-  font-size: 20px;
-  font-weight: bold;
-  box-shadow: 0 0 10px rgba(46, 204, 113, 0.6);
+  padding: 0.8vh 2vw;
+  border-radius: 3vw;
+  font-size: 1.3vw;
+  font-weight: 700;
+  box-shadow: 0 0 1vw rgba(46, 204, 113, 0.6);
 }
 
 
 .not-tested {
+  // background: linear-gradient(135deg, #e74c3c, #c0392b);
+  // padding: 6px 16px;
+  // border-radius: 20px;
+  // font-size: 20px;
+  // font-weight: bold;
+  // box-shadow: 0 0 10px rgba(231, 76, 60, 0.6);
   background: linear-gradient(135deg, #e74c3c, #c0392b);
-  padding: 6px 16px;
-  border-radius: 20px;
-  font-size: 20px;
-  font-weight: bold;
-  box-shadow: 0 0 10px rgba(231, 76, 60, 0.6);
+  padding: 0.8vh 2vw;
+  border-radius: 3vw;
+  font-size: 1.3vw;
+  font-weight: 700;
 }
-
 
 
 
@@ -304,27 +386,36 @@ td.normal {
 }
 
 .base-line {
-    position: absolute; top: 57px; left: 5%; right: 5%;
+    position: absolute; top: 30px; left: 5%; right: 5%;
     height: 2px; background:  #cbd5e1; z-index: 1;
 }
 
 .step-item {
     flex: 1; display: flex; flex-direction: column; align-items: center;
-    position: relative; z-index: 2; padding: 0 10px;
+    position: relative; z-index: 2; padding: 0 5px;
 }
 
 /* Step Circles & Numbers */
 .node { position: relative; margin-bottom: 20px; }
 .step-num {
-    position: absolute;     top: 3px;
-    left: 0px;background: #1e293b;
-    color: white; width: 20px; height: 20px; border-radius: 50%;
-    font-size: 10px; display: flex; align-items: center; justify-content: center;
-    border: 2px solid white; z-index: 3;
+       position: absolute;
+    top: 3px;
+    left: 0px;
+    background: #1e293b;
+    color: white;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    font-size: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid white;
+    z-index: 3;
 }
 
 .icon-circle {
-    width: 80px; height: 80px; background: white; border-radius: 50%;
+    width: 40px; height: 40px; background: white; border-radius: 50%;
     display: flex; align-items: center; justify-content: center;
     border: 4px solid #e2e8f0; box-shadow: 0 4px 10px rgba(0,0,0,0.05);
 }
@@ -339,21 +430,25 @@ td.normal {
 
 /* Card Styling */
 .content-card {
-    border: 1px solid white;
-    background: white; width: 100%; padding: 20px 10px;
-    text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.04);
-    min-height: 160px; border-top: 4px solid transparent;
+   border: 1px solid white;
+    background: white;
+    width: 100%;
+    padding: 5px 3px;
+    text-align: center;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.04);
+    min-height: 83px;
+    border-top: 4px solid transparent;
 }
 
-.content-card h4 { font-size: 12px; color:  #334155; margin-bottom: 12px; line-height: 1.3; }
-.info { font-size: 14px;
+.content-card h4 { font-size: 8px; color:  #334155; margin-bottom: 7px; line-height: 1.3; }
+.info { font-size: 5px;
     color: #000000;
     margin-bottom: 3px; }
 .sub-text { font-size: 9px; color:  #94a3b8; margin-bottom: 15px; font-style: italic; }
 
 /* Status Badges */
 .status {
-    margin-top: 15px; font-size: 10px; font-weight: 700; padding: 6px;
+    margin-top: 0px; font-size: 7px; font-weight: 700; padding: 3px;
     border-radius: 6px; display: inline-flex; align-items: center; gap: 5px;
 }
 
@@ -387,8 +482,8 @@ td.normal {
 .final-blue { border-top-color:  #3b82f6; }
 
 .step-icon {
-  width: 28px;
-  height: 28px;
+  width: 15px;
+  height: 15px;
 }
 
 .sub-text{
@@ -401,13 +496,19 @@ td.normal {
 
 
 .custom-outer-border {
-  border: 1.5px solid #D6E3F0; 
-  border-radius: 15px;
-  padding: 40px;
-  background-color: #F1F6FB;
-  margin: 20px;
-  position: relative;
-  overflow: hidden;
+    border: 1.5px solid #D6E3F0;
+    border-radius: 15px;
+    padding: 28px;
+    padding-bottom: 13px;
+    padding-top: 26px;
+    padding-left: 35px;
+    padding-right: 0px;
+    background-color: #F1F6FB;
+    margin: 10px;
+    position: relative;
+    overflow: hidden;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 
@@ -417,6 +518,7 @@ td.normal {
   padding: 16px;
   background-color: #F1F6FB;
   border: 1.5px solid #D6E3F0;
+  padding-bottom: 2px;
 }
 
 
@@ -430,12 +532,13 @@ td.normal {
   align-items: center;
   justify-content: space-between;
 
-  padding: 15px 28px;           
-  margin: 20px;
+  padding: 5px 10px;        
+  margin-right: 20px;
+  margin-left: 20px;   
 }
 
 .logo-box img {
-  height: 58px;                
+  height: 26px;                
   width: auto;
   object-fit: contain;
 }
@@ -446,16 +549,16 @@ td.normal {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 26px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 400;
   color: #111827;
 }
 
 .date-box {
-  margin-left: auto;              
-  font-size: 22px;
-  font-weight: 600;
-  color: #000000;
+  margin-left: auto;
+    font-size: 18px;
+    font-weight: 400;
+    color: #000000;
 }
 
 
@@ -666,4 +769,139 @@ svg {
 
 .card2:nth-child(n+5) {
     margin-top: 50px;   /* affects cards 5,6,7,8 only */
+}
+
+
+.change-ip-btn {
+  padding: 10px 18px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #1f2937; /* dark gray */
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  border: none;
+}
+
+.change-ip-btn:hover {
+  background-color: #f3f4f6;
+}
+
+.change-ip-btn:active {
+  transform: scale(0.97);
+}
+
+.change-ip-btn:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.3);
+}
+.image-btn {
+  padding: 8px;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-btn img {
+  width: 28px;
+  height: 28px;
+  object-fit: contain;
+}
+
+.image-btn:hover {
+  background-color: #f3f4f6;
+}
+
+.image-btn:active {
+  transform: scale(0.95);
+}
+
+.image-btn:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.3);
+}
+
+
+.ip-center {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;      /* vertical center */
+  justify-content: center;  /* horizontal center */
+}
+
+.ip-card {
+  padding: 24px 28px;
+  border-radius: 12px;
+  background-color: #ffffff;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  min-width: 320px;
+  text-align: center;
+}
+
+.ip-title {
+  margin-bottom: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #1f2937;
+}
+
+.ip-input {
+  width: 100%;
+  padding: 10px 12px;
+  font-size: 14px;
+  border-radius: 6px;
+  border: 1px solid #d1d5db;
+  margin-bottom: 16px;
+}
+
+.ip-input:focus {
+  outline: none;
+  border-color: #3b82f6;
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.25);
+}
+
+.set-ip-btn {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 6px;
+  background-color: #43536b;
+  color: #ffffff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.set-ip-btn:hover {
+  background-color: #40577a;
+}
+select.ip-input {
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='%236b7280' d='M5.25 7.5L10 12.25 14.75 7.5'%3E%3C/path%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  background-size: 16px;
+}
+.furnace-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;    
+    justify-content: center; 
+    height: 80vh;           
+}
+
+.furnace-img {
+    width: 200px;          
+    height: auto;
+    margin-bottom: 20px;    
+}
+
+.status-text {
+    color: white;          
+    font-family: Arial, sans-serif;
+    font-size: 2.2rem;
 }
