upadte in the logo

--- a/src/app/result/result.html
+++ b/src/app/result/result.html
@@ -46,7 +46,7 @@
         <div class="logo-text">
           <!-- <div class="title">ACCEEDO</div>
           <div class="sub">MeltPro</div> -->
-          <img style="height: 40px;  margin-top: 15px; " src="assets/logo.png" alt="Acceedo Logo" />
+          <img style="height: 40px;  margin-top: 15px; " [src]="logoUrl" alt="Acceedo Logo" />
           <!-- <button class="change-ip-btn image-btn" (click)="resetIP()">
   <img src="assets/ip.png" alt="Change IP" />
 </button> -->
@@ -199,7 +199,7 @@
 
   <div class="side-header">
         <div class="logo-box">
-            <img src="assets/logo.png" alt="Sandfits Casting Excellence">
+            <img  [src]="logoUrl" alt="Sandfits Casting Excellence">
         </div>
         <div class="title center-title">
             Furnace Management System
